# roboyMatrix

./: .gitignore  README.md
src/communication/: CMakeLists.txt  package.xml
src/communication/include/: CommonDefinitions.hpp
src/communication/msgs/: LEDControl.msg  LEDPattern.msg  MicroPhoneControl.msg  MicroPhoneData.msg
src/communication/srvs/: Record.srv
src/interface/: CMakeLists.txt  package.xml
src/interface/include/interface/interface/: main_window.hpp
src/interface/src/: main.cpp  main_window.cpp
src/interface/ui/: main_window.ui
src/matrix/: CMakeLists.txt  package.xml
src/matrix/cmake/: Findmatrix.cmake
src/matrix/include/: matrixNode.hpp
src/matrix/src/: main.cpp  matrixNode.cpp
